--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="lib.js"></script>
   <script src="index.js"></script>
 </head>
 
